@@ -1,3 +1,9 @@
+SimpleComplex/Config 2.x, 2018-07-28
+------------------------------------
+- Register CLI command provider in document root .ini file.
+  And don't provide own cli.phpsh; rely on the Utils' package's generic
+  cli.phpsh.
+
 SimpleComplex/Config 2.x, 2018-06-25
 ------------------------------------
 - Discovery mode require that .ini files are placed in parent dirs 'config-ini'.
